...

    <!-- Toolbar -->
    <string name="app_name">Sound Recorder</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists: please choose a different file name</string>
...
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="customAlertDialogFromAudioTitle">Speech-To-Text</string>
    <string name="customAlertDialaogForExtractedTestButtonOk">Ok</string>
    <string name="customAlertDialaogForExtractedTestButtonCopy">Copy</string>
    <string name="textCopiedToClipboard">Text Copied To Clipboard</string>
    <string name="customAlertDialogFromAudioBodyDescription">Speech-To-Text</string>
    <string name="nameAlreadyExistsInDB">The entered name already exists in the app database</string>
    <string name="textExtractionInProgress">Extraction in progress, please wait</string>
    <string name="speech_to_text_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nulla ut eros nibh. Nulla facilisi. Sed iaculis velit nulla. Donec pharetra arcu augue,
...
